--- a/src/translations/hu.json
+++ b/src/translations/hu.json
@@ -37,5 +37,6 @@
   "No user found with this email": "Nem található fiók ezzel az e-mail címmel",
   "Invalid Password": "Helytelen Jelszó",
   "Email not confirmed": "Az e-mail nem erősült meg",
-  "User not found": "Felhasználó nem található"
+  "User not found": "Felhasználó nem található",
+  "A user with this email address has already been registered": "Egy felhasználó ezzel az e-mail címmel már regisztrált."
 }
