--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -37,5 +37,6 @@
   "No user found with this email": "Nenhum usuário encontrado com esse email",
   "Invalid Password": "Senha inválida",
   "Email not confirmed": "Email não confirmado",
-  "User not found": "Usuário não encontrado"
+  "User not found": "Usuário não encontrado",
+  "A user with this email address has already been registered": "Um usuário com este endereço de e-mail já foi registrado."
 }
