Added Surname field translations

--- a/src/translations/cs.json
+++ b/src/translations/cs.json
@@ -27,8 +27,10 @@
   "message_verfication_error": "Při ověřování vašeho účtu došlo k chybě. Zkuste to prosím znovu nebo kontaktujte správce.",
   "message_signup_disabled": "Registrace pro veřejnost jsou zakázány. Kontaktujte správce a požádejte o pozvánku.",
   "form_name_placeholder": "Jméno",
+  "form_surname_placeholder": "Příjmení",
   "form_email_label": "Zadejte svůj e-mail",
   "form_name_label": "Zadejte své jméno",
+  "form_surname_label": "Zadejte své příjmení",
   "form_email_placeholder": "E-mail",
   "form_password_label": "Zadejte své heslo",
   "form_password_placeholder": "Heslo",
