--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -27,8 +27,10 @@
   "message_verfication_error": "Se produjo un error al verificar tu cuenta. Por favor intenta nuevamente o contacta a un administrador.",
   "message_signup_disabled": "Los registros públicos están deshabilitados. Contacta a un administrador y solicita una invitación.",
   "form_name_placeholder": "Nombre",
+  "form_surname_placeholder": "Apellido",
   "form_email_label": "Ingresa tu correo electrónico",
   "form_name_label": "Ingresa tu nombre",
+  "form_surname_label": "Ingresa tu apellido",
   "form_email_placeholder": "Correo electrónico",
   "form_password_label": "Ingresa tu contraseña",
   "form_password_placeholder": "Contraseña",
