--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -27,8 +27,10 @@
   "message_verfication_error": "Il y a eu une erreur lors de la vérification de votre compte. Veuillez réessayer ou contacter un administrateur.",
   "message_signup_disabled": "Les inscriptions publiques sont désactivées. Contactez un administrateur et demandez une invitation.",
   "form_name_placeholder": "Nom",
+  "form_surname_placeholder": "Nom de famille",
   "form_email_label": "Entrez votre adresse e-mail",
   "form_name_label": "Saisissez votre nom",
+  "form_surname_label": "Entrez votre nom de famille",
   "form_email_placeholder": "E-mail",
   "form_password_label": "Saisissez votre mot de passe",
   "form_password_placeholder": "Mot de passe",
