--- a/src/translations/hu.json
+++ b/src/translations/hu.json
@@ -27,8 +27,10 @@
   "message_verfication_error": "Probléma történt a fiókja megerősítése közben. Kérjük próbálja újra, vagy vegye fel a kapcsolatot egy adminisztrátorral.",
   "message_signup_disabled": "A nyilvános regisztráció nincs engedélyezve. Vegye fel a kapcsolatot egy adminisztrátorral és kérjen meghívót.",
   "form_name_placeholder": "Név",
+  "form_surname_placeholder": "Vezetéknév",
   "form_email_label": "Adja meg az e-mail címét",
   "form_name_label": "Adja meg a nevét",
+  "form_surname_label": "Adja meg a vezetéknevét",
   "form_email_placeholder": "E-mail",
   "form_password_label": "Adja meg a jelszavát",
   "form_password_placeholder": "Jelszó",
