--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -27,8 +27,10 @@
   "message_verfication_error": "Wystąpił błąd podczas weryfikcacji Twoje konta. Spróbuj ponownie lub skontaktuj się z administratorem,",
   "message_signup_disabled": "Publiczna rejestracja jest wyłączona. Skontaktuj się z administratorem by uzyskać zaproszenie.",
   "form_name_placeholder": "Imię",
+  "form_surname_placeholder": "Nazwisko",
   "form_email_label": "Wprowadź Twój adres email",
   "form_name_label": "Wprowadź Twoje imię",
+  "form_surname_label": "Wprowadź swoje nazwisko",
   "form_email_placeholder": "Email",
   "form_password_label": "Wprowadź twoje hasło",
   "form_password_placeholder": "Hasło",
