--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -27,8 +27,10 @@
   "message_verfication_error": "Ocorreu um erro ao verificar sua conta. Tente novamente ou entre em contato com um administrador.",
   "message_signup_disabled": "Registros públicos estão desabilitados. Contate um administrador e peça por um convite.",
   "form_name_placeholder": "Nome",
+  "form_surname_placeholder": "Sobrenome",
   "form_email_label": "Insira seu email",
   "form_name_label": "Insira seu nome",
+  "form_surname_label": "Digite seu sobrenome",
   "form_email_placeholder": "Email",
   "form_password_label": "Insira sua senha",
   "form_password_placeholder": "Senha",
