--- a/src/translations/sk.json
+++ b/src/translations/sk.json
@@ -27,8 +27,10 @@
   "message_verfication_error": "Pri overovaní vášho účtu došlo k chybe. Prosím, skúste to znova alebo kontaktujte správcu.",
   "message_signup_disabled": "Registrácia pre verejnosť sú zakázané. Kontaktujte správcu a požiadajte o pozvánku.",
   "form_name_placeholder": "Meno",
+  "form_surname_placeholder": "Priezvisko",
   "form_email_label": "Zadajte svoj e-mail",
   "form_name_label": "Zadajte svoje meno",
+  "form_surname_label": "Zadajte vaše priezvisko",
   "form_email_placeholder": "E-mail",
   "form_password_label": "Zadajte svoje heslo",
   "form_password_placeholder": "Heslo",
