--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -27,8 +27,10 @@
   "message_verfication_error": "There was an error verifying your account. Please try again or contact an administrator.",
   "message_signup_disabled": "Public signups are disabled. Contact an administrator and ask for an invite.",
   "form_name_placeholder": "Name",
+  "form_surname_placeholder": "Surname",
   "form_email_label": "Enter your email",
   "form_name_label": "Enter your name",
+  "form_surname_label": "Enter your surname",
   "form_email_placeholder": "Email",
   "form_password_label": "Enter your password",
   "form_password_placeholder": "Password",
@@ -37,5 +39,6 @@
   "No user found with this email": "No user found with this email",
   "Invalid Password": "Invalid Password",
   "Email not confirmed": "Email not confirmed",
-  "User not found": "User not found"
+  "User not found": "User not found",
+  "A user with this email address has already been registered": "A user with this email address has already been registered"
 }
