--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -27,8 +27,10 @@
   "message_verfication_error": "Ошибка подтверждения аккаунта. Пожалуйста, попробуйте снова или свяжитесь с администратором.",
   "message_signup_disabled": "Регистрация закрыта. Свяжитесь с администратором, чтобы запросить приглашение.",
   "form_name_placeholder": "Имя",
+  "form_surname_placeholder": "Фамилия",
   "form_email_label": "Введите Ваш адрес электронной почты",
   "form_name_label": "Введите имя",
+  "form_surname_label": "Введите вашу фамилию",
   "form_email_placeholder": "Электронная почта",
   "form_password_label": "Введите пароль",
   "form_password_placeholder": "Пароль",
